adjustment documentation swagger
